--- a/index.html
+++ b/index.html
@@ -12,43 +12,48 @@
 
 <body>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-sm-6">
+                <div class="card">
+                    <a href="#">
+                        <img class="card-img-top" src="https://placehold.it/700x400">
+                    </a>
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make
+                            up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
 
-    <nav class="navbar bg-dark navbar-dark navbar-expand-lg">
+            <div class="col-lg-4 col-sm-6">
+                <div class="card">
+                    <a href="#">
+                        <img class="card-img-top" src="https://placehold.it/700x400">
+                    </a>
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make
+                            up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
 
-        <div class="container">
-
-            <a href="#" class="navbar-brand">Bootstrap</a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-
-                <span class="navbar-toggler-icon"></span>
-
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-
-                <ul class="navbar-nav ms-auto">
-
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#" >Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" >About</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" >Contact</a>
-                    </li>
-
-                </ul>
-
+            <div class="col-lg-4 col-sm-6">
+                <div class="card">
+                    <a href="#">
+                        <img class="card-img-top" src="https://placehold.it/700x400">
+                    </a>
+                    <div class="card-body">
+                        <h4 class="card-title">Card title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make
+                            up the bulk of the card's content.</p>
+                    </div>
+                </div>
             </div>
         </div>
-
-    </nav>
-
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
