--- a/index.html
+++ b/index.html
@@ -8,53 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+        <style>
+            
+        </style>
 </head>
 
 <body>
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-sm-6">
-                <div class="card">
-                    <a href="#">
-                        <img class="card-img-top" src="https://placehold.it/700x400">
-                    </a>
-                    <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make
-                            up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-sm-6">
-                <div class="card">
-                    <a href="#">
-                        <img class="card-img-top" src="https://placehold.it/700x400">
-                    </a>
-                    <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make
-                            up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-sm-6">
-                <div class="card">
-                    <a href="#">
-                        <img class="card-img-top" src="https://placehold.it/700x400">
-                    </a>
-                    <div class="card-body">
-                        <h4 class="card-title">Card title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make
-                            up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
+            <img class="img-thumbnail" src="computer.jpeg" alt="" width="70vw" height="550vh">
         </div>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
