--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,15 @@
 
 <body>
 
-    <button type="button" class="btn btn-danger">Click Me</button>
+    <footer class="py-5 bg-dark fixed-bottom">
+        
+        <div class="container">
+            
+            <p class="m-0 text-center text-white">Footer Copy Here</p>
+
+        </div>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
